# ComfyUI-Lumina-Video

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
comfyui/: __init__.py  model_loader.py  sampler.py  vae_decode.py
comfyui/workflows/: Lumina-Video.json
models/: model.py
models/Lumina-Video/: README.md  model_args.pth
